tests/baselines/reference/parserErrorRecovery_ObjectLiteral4.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ObjectLiteral4.ts (1 errors) ====
    var v = { a: 1
    return;
    ~~~~~~
!!! parserErrorRecovery_ObjectLiteral4.ts(2,1): error TS1005: ',' expected.